[package]
name = "osv2osv"
version = "0.2.0"
authors = ["Benjamin W. Broersma <bw@broersma.com>"]

description = "Converting OSV csv back to (byte identical) EML_NL"
readme = "README.md"
keywords = ["osv", "eml", "eml-nl", "csv"]

repository = "https://github.com/openstate/osv2osv"
documentation = "https://github.com/openstate/osv2osv"

license = "CC-0"

[dependencies]
chrono = "0.4"
csv = "1"
regex = "1"
rust-crypto = "0.2"
structopt = "0.2"
xml-rs = "0.8"